# OverlayBMPonYUV

./: CMakeLists.txt  README.md
sources/: bmp_to_yuv.cpp  bmp_to_yuv.h  main.cpp  overlay.cpp  overlay.h  read_yuv.cpp  read_yuv.h
